--- a/whattoeat/application/modules/estabelecimento/views/scripts/funcionario/grid-view.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/scripts/funcionario/grid-view.phtml
@@ -23,7 +23,7 @@
  </tr>
     <?php }?>
     <tr class="head">
-      <td colspan="6" align="right"><?php echo $paging ?></td>
+      <td colspan="6" align="right"><?php echo $this->paging ?></td>
     </tr>
   </table>
 </div>
