--- a/whattoeat/application/modules/estabelecimento/views/scripts/produto/index.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/scripts/produto/index.phtml
@@ -192,8 +192,8 @@
                             <tr><td colspan="30">
 
                             <tr>
-                                <td align="center">&nbsp;</td>                                
-                                <td align="center">Valor Calorico</td>
+                                <td align="left">&nbsp;</td>                                
+                                <td align="left">Quantidade em gramas </td>
                             </tr>
 <?php
                             foreach ($this->ingredienteEmpresaRec as $k => $v)
@@ -201,18 +201,22 @@
                                 if (!empty($this->formData4[$v['cod_ingrediente']]))
                                 {
                                     $checked = "checked";                                    
-                                    $valor_calorico = $this->formData4[$v['cod_ingrediente']]['valor_calorico'];
+                                    //$valor_calorico = $this->formData4[$v['cod_ingrediente']]['valor_calorico'];
+                                    $quantidade_utilizada = $this->formData4[$v['cod_ingrediente']]['quantidade_utilizada'];
                                 } else
                                 {
                                     $checked = '';
-                                    $valor_calorico = '';
+                                    //$valor_calorico = '';
+                                    $quantidade_utilizada = '';
                                     $preco = '';
                                 }
  
 ?>
                                 <tr>
                                     <td align="left"><input type="checkbox" value="<?php echo $v['cod_ingrediente'] ?>" name="ie[cod_ingrediente][]" <?php echo $checked; ?>> <?php echo $v['nome'] ?> </td>
-                                    <td align="center"><input type="text" class="input-medium validDecimalNumber"  title=''  name="ie[valor_calorico][<?php echo $v['cod_ingrediente'] ?>]" value="<?php echo $valor_calorico ?>" style="width: 200px;">
+                                    <!-- <td align="center"><input type="text" class="input-medium validDecimalNumber"  title=''  name="ie[valor_calorico][<?php //echo $v['cod_ingrediente'] ?>]" value="<?php //echo $valor_calorico ?>" style="width: 200px;"> -->
+                                    <input type="hidden" name="ie[valor_calorico][<?php echo $v['cod_ingrediente'] ?>]">
+                                    <td align="left"><input type="text" class="input-medium validDecimalNumber"  title=''  name="ie[quantidade_utilizada][<?php echo $v['cod_ingrediente'] ?>]" value="<?php echo $quantidade_utilizada ?>" style="width: 200px;">
                                         <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
                                 </tr>
 <?php } ?>
