--- a/whattoeat/application/modules/portal/views/scripts/pedido/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/pedido/index.phtml
@@ -17,7 +17,7 @@
 
     <form action="/portal/pedido/concluir-Compra" method="POST" name="form1" id="form1" onsubmit="return validateForm('form1')" >
 
-	<input type="submit" value="Concluir Compra">
+	<!--  Ainda não vamos opferecer efetivar a compra <input type="submit" value="Concluir Compra">  -->
 	<input type="button" value="Continuar Comprando" onclick="javascript:document.getElementById('form1').action='/portal/pedido/continuar-Comprando',document.getElementById('form1').submit()">
 
 	<?php
