--- a/whattoeat/application/modules/portal/views/scripts/index/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/index/index.phtml
@@ -79,35 +79,35 @@
         </form>
     </div>
 
-
-    <div style="float:right;margin-right: 90px;">
-
-
-	<table id="tableListaPedido" >
-	    <tr>
-		  <form action="/portal/index/limpar-Carrinho" method="post" class="" >
-	
-		<td align="center" colspan="5"><input class="btn btn-warning" type="submit" value="Limpar Carrinho"> <!--onclick="javascript:limparCarrinhoAjax()"--> </td>
+<h3>Nosso sistema ainda não faz pedidos mas você pode simular suas compras e verificar o custo total. Compre em quantos estabelecimentos quiser. 
+    Todos os itens escolhidos ficarão no seu carrinho.</h3>
+    
+    <div style="margin-right: 90px;">
+        
+	      <form action="/portal/index/limpar-Carrinho" method="post" class="" >
+                  <div style="float: right; position: relative; ">
+		<input class="btn btn-warning" type="submit" value="Limpar Carrinho"> 
+                </div>
 		</form>
-
+        
   		  <form action="/portal/pedido/fechar-Pedido" method="post" class="" >
-
-		<td align="center" colspan="5"><input class="btn btn-success" type="submit" value="Fechar Pedido">  </td>
+                    <div style="float: right; margin-right: 20px; ">
+                <input class="btn btn-success" type="submit" value="Fechar Pedido"> 
+                </div>
 		</form>
 
+        
+        <div style="clear: both;"></div>
+	   
+     </div>
 
-	    </tr>
-	    <tr>
-		<td align="center" colspan="5"><h4> Seu pedido </h4></td>
-	    </tr>
-	    <tr style="font-family: verdana; font-size: 11px;">
-		<th> Empresa </th> <th> Produto </th> <th> Tamanho </th> <th> Preço </th> <th>Qt</th>
-	    </tr>
-
+    
+     
+<div style="float: right;margin-right: 90px;">
+<h4> Seu pedido </h4>
+        
+<table  id="tableListaPedido" style=" border-spacing: 10px; border-collapse: separate;" >  
 	</table>
-
-  </div>
-
 
 
 </div>
