--- a/whattoeat/public/css/portal.css
+++ b/whattoeat/public/css/portal.css
@@ -144,14 +144,13 @@ ol, ul {
 }
 
 .itensPedido {
-	font-size: 12px;
+	font-size: 14px;
 	font-family: "Trebuchet MS", sans-serif;
 	color: Orange;
 }
 
-.empresaPedido {
-	font-weight: lighter;
-	font-size: 12px;
-	font-family: verdana;
-	color: Black;
+.empresaPedido {	
+	font-size: 14px;
+	font-family: "Trebuchet MS", sans-serif;
+	color: black;
 }
