--- a/whattoeat/application/modules/portal/views/scripts/index/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/index/index.phtml
@@ -39,17 +39,19 @@
             qualquer outro critério disponível para te trazer a opção mais certa para você!</h1> 
 
             <div style="text-align: left; border: transparent; width: 380px; ">
+                 <p class="lead">Aqui você pode digitar qualquer termo para sua consulta:</p>
+                
 		Ex:  macarrão, massa verde, "Macarronada da Tia Dalva"
 		<br>
-		Ex: catupiri, bacon, peito de peru
+		Ex: catupiri, bacon, "peito de peru", chia 
             </div>
 
             <br>
             <input class="form-control" type="textarea" name="criterio" style="width: 400px;" value="<?php echo $this->pesquisa_facapedido_criterio; ?>">
             <br>
             <br>
-            Tipos de produtos:
-            <br><br>
+             <p class="lead">Culinária:</p>
+            
 
             <div style="width:450; height: 100;">
 		<?php
@@ -69,9 +71,20 @@
 		<?php } ?>
 	    </div>
 
-	    <p class="lead">Caloria < que: </p><input class="form-control" type="text" name="caloria" style="width:50" value="<?php echo $this->pesquisa_facapedido_caloria; ?>">
-
-
+            <p class="lead">Valor calórico até: </p><input class="form-control" type="text" name="caloria" style="width:50" value="<?php echo $this->pesquisa_facapedido_caloria; ?>">
+<br>
+            <br>
+            
+            <p class="lead">Listar apenas estabelecimentos que oferecem: </p>
+            
+            
+              <div style="width:450; height: 100;">
+		<input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('diabetico', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="diabetico" class=""> Produto especial para diabético
+                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('pouco_sal', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="pouco_sal" class=""> Produto com pouco sal
+                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('sem_glutem', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="sem_glutem" class=""> Produto sem glútem
+                <input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('lactose', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="lactose" class=""> Produto sem lactose
+		<input  type="checkbox" name="empresa_oferece[]" <?php echo in_array('organico', $this->pesquisa_facapedido_empresa_oferece) ? 'checked' : '' ?> value="organico" class=""> Produto orgânico	
+              </div>
 
 	    <br><br><br>
             <input class="btn btn-primary" type="submit" value="Pesquisar">
