--- a/whattoeat/application/modules/portal/views/scripts/index/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/index/index.phtml
@@ -21,6 +21,7 @@
 
 	<div class="topo">
 		<div class="logo"><img src="/img/logotipo.png"></div>
+                <div style="float: right;" class=""> <a href="estabelecimento.php" > Seu estabelecimento</div>
 	</div>
     <?php
 
