--- a/whattoeat/application/modules/portal/views/scripts/index/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/index/index.phtml
@@ -141,7 +141,7 @@
                     echo $this->resultado[$i]["rua"] . " " . $this->resultado[$i]["numero"]. " " . $this->resultado[$i]["complemento"] . " " . $this->resultado[$i]["bairro"] . " <br> \n";
                     echo "Telefone 1: " . $this->resultado[$i]["telefone1"] . " Telefone 2 : " . $this->resultado[$i]["telefone2"] . " <br> \n";
                     echo "email: " . $this->resultado[$i]["email"] . " <br> \n";
-		    echo "</div> <!-- nome da empresa --> \n";
+		    echo " </div> \n";
 
 
 		    //verifica se a empresa esta atendendo nesse horario
