--- a/whattoeat/application/modules/portal/views/scripts/loja/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/loja/index.phtml
@@ -15,13 +15,20 @@
 	if(!empty($this->nomeCliente))
 	    echo "<p>Bem vindo".  $this->nomeCliente ."! (<a href='/portal/cliente/logout'> Logout </a>) </p>";
 
+        echo "<div style=' padding-left: 50px; clear:both; margin: 40px; color:black;' > \n";
+        echo "<div style='float: left; margin: 20px 1px 20px 21px; width:200px;'><p><img src='/portal/loja/get-Logo-Empresa/id/" . $this->resultado[0]['cod_empresa'] . "' width='141' height='auto' alt=''> </p> </div> \n";
+        echo "<div style='float: left; margin: 20px 1px 20px 21px; width:300px; '>  \n";
+        echo  "<div style='font-weight: bold;'>" . $this->resultado[0]["razao_social"] . " </div> <br> \n";
+        echo $this->resultado[0]["rua"] . " " . $this->resultado[0]["numero"]. " " . $this->resultado[0]["complemento"] . " " . $this->resultado[0]["bairro"] . " <br> \n";
+        echo "Telefone 1: " . $this->resultado[0]["telefone1"] . " Telefone 2 : " . $this->resultado[0]["telefone2"] . " <br> \n";
+        echo "email: " . $this->resultado[0]["email"] . " <br> \n";
+	echo " </div>  \n";
+
 
     ?>
 
 
-<div style="padding-left: 50px; font-size: 20px; font-weight: bold;" > <img src='/portal/loja/get-Logo-Empresa/id/<?php echo $this->cod_empresa ?>' width='141' height='auto' alt=''> <?php echo $this->razao_social  ?></div>
-
-<div align="center" width="80%">
+<div align="center" width="80%" style="clear:both;">
 
     <div style="border: solid gray; margin: 50px;">
 
@@ -125,10 +132,6 @@
 	<p style='display: block' >
 	    <?php echo $this->resultado[$i]["nome"]; ?>
     </p> </div> <!-- nome do produto -->
-
-    <div style='float: left; margin: 60px 1px 20px 80px; width:150px; font-size: medium;'>
-	<?php echo $this->resultado[$i]["razao_social"]; ?>
-        </div> <!-- nome da empresa -->
 
         <!--	    //imprime os tamanhos disponiveis e precos do produto -->
         <div style='float: left; margin: 60px 1px 20px 80px; width:400px; font-size: medium;'>
