--- a/whattoeat/application/modules/portal/views/scripts/index/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/index/index.phtml
@@ -20,8 +20,8 @@
 </head>
 
 	<div class="topo">
-		<div class="logo"><img src="/img/logotipo.png"></div>
-                <div style="float: right;" class=""> <a href="estabelecimento.php" > Seu estabelecimento</div>
+		<div class="logo" style="float:left;"><img src="/img/logotipo.png"></div>
+                <div style="float: right;" class=""> <a href="/estabelecimento/auth" > Para seu estabelecimento </a></div>
 	</div>
     <?php
 
