--- a/whattoeat/application/modules/portal/views/scripts/loja/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/loja/index.phtml
@@ -127,7 +127,7 @@
           
                   <div style="float: right; position: relative; ">
 	   
-        <input class="btn btn-warning" type="button" value="Continuar Comprando" onclick="location.href='<?php echo $this->baseUrl() ?>/portal/index'">       
+        <input class="btn btn-warning" type="button" value="Continuar Comprando" onclick="location.href='/portal/index'">       
         
     </div> 
 
