--- a/whattoeat/application/modules/portal/views/scripts/loja/index.phtml
+++ b/whattoeat/application/modules/portal/views/scripts/loja/index.phtml
@@ -246,7 +246,7 @@
 
     <div style="clear:both; float:left; width:500px;">	
 	<p style='font-size: medium;'>Descrição do produto: 
-	    <?php echo $this->resultado[$i]["descricao"]; ?>
+	    <?php echo $this->resultado[$i]["descricao"]." Valor calórico: ".$this->resultado[$i]["valor_calorico"]." cal"; ?>
     </p> </div> <!-- nome do produto -->
 
 
